fix: allow info boxes to wrap

--- a/src/components/InfoBox/InfoBox.scss
+++ b/src/components/InfoBox/InfoBox.scss
@@ -5,6 +5,7 @@
     padding: 11px 10px;
     margin-left: -1px;
     margin-bottom: -1px;
+    min-width: auto;
   }
   .content-box .icon {
     width: 64px;
